[package]
name = "dbz_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
futures-util = "0.3.28"
indicatif = "0.17.3"
regex = "1.8.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.16.0"
tokio = { version = "1", features = ["full"] }
